# farming-core-lib

./: .gitignore  pyproject.toml
data/: records.json  todo.md
farming_core/models/: semantic_activity.py
farming_core/parser/: dev_test.py
farming_core/parser/semantic_parser/: base.py  dispatcher.py  rules_bridge.py
src/farming_core/parser/: semantic_entry.py
src/farming_core/parser/semantic_parser/: rules_swap.py
src/farming_core/utils/: explorer.py
